--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,9 @@ hr{
 .mt-2{
     margin-top: 1em;
 }
+.mt-4{
+    margin-top: 4em;
+}
 
 .text-sm{
     font-size: .75rem !important;
@@ -217,6 +220,10 @@ hr{
 .capitalize{
     text-transform: capitalize !important;
 }   
+
+.bold{
+    font-weight: 600 !important;
+}
 
 /* ****************************************************** */
 /* ****************************************************** */
@@ -422,6 +429,69 @@ p.action{
 
 
 /* View property */
+.property-view {
+   margin: 1em auto;
+   width: 55dvw;
+   max-width: 60dvw;
+}
+.property-view .property-card{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    column-gap: 2em;
+    padding: 1em;
+    border-radius: .25em;
+    background: var(--background-light);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+}
+.property-view .property-card aside.property-image img{
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    margin-bottom: .75em;
+}
+section.bids{
+    margin: 2em 0;
+    padding: 1em;
+    border-radius: .25em;
+    background: var(--background-light);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+}
+section.bids .bid-record{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 2em;
+    padding: .5em 0;
+    border-bottom: 1px solid var(--border-color);
+    transition: background 0.3s ease-in-out;
+}
+section.bids .bid-record:hover{
+    background: var(--gray);
+}
+
+.bg-gray{
+    background: var(--gray);
+}
+section.bids .bid-record p{
+  width: 25%;
+  max-width: 25%;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /* Responsiveness for small screens */
 @media screen and (max-width: 768px) {
