--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,9 +456,12 @@ p.action{
     background: var(--background-light);
     box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 }
+.property-view .property-card aside.property-image, .property-view .property-card aside.property-details {
+    width: 46%;
+}
 .property-view .property-card aside.property-image img{
     width: 100%;
-    height: 350px;
+    height: 300px;
     object-fit: cover;
     margin-bottom: .75em;
 }
@@ -502,6 +505,17 @@ section.bids .bid-record p{
     border-radius: .25em;
 }
 
+
+/* add property */
+.add-property{
+    margin: 1em auto;
+    width: 35dvw;
+    max-width: 40dvw;
+
+    background: var(--background-light);
+    padding: 1em;
+    border-radius: .25em;
+}
 
 
 
@@ -557,7 +571,7 @@ section.bids .bid-record p{
     }
 
     /* edit property */
-    .edit-property{
+    .edit-property, .add-property{
         margin: 1em auto;
         width: 100dvw;
         max-width: 100dvw;
