--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -553,7 +553,9 @@ section.bids .bid-record p{
     border-radius: .25em;
 }
 
-
+.sm-only, .tog{
+    display: none;
+}
 
 
 
@@ -578,8 +580,11 @@ section.bids .bid-record p{
     /* view property */
     .property-view {
         margin: 1em auto;
-        width: 100dvw;
-        max-width: 100dvw;
+        width: 100%;
+        max-width: 100%;
+    }
+    .property-view .property-card aside.property-image, .property-view .property-card aside.property-details {
+        width: 100%;
     }
     section.bids{
         overflow-x: auto;
@@ -605,6 +610,9 @@ section.bids .bid-record p{
     .sm-none{
     display: none !important;
     }
+    .sm-only{
+        display: block !important;
+    }
 
     /* edit property */
     .edit-property, .add-property{
@@ -612,6 +620,82 @@ section.bids .bid-record p{
         width: 100dvw;
         max-width: 100dvw;
     }
+
+    /* side bar should be on top */
+    
+    .sidebar {
+        position: absolute;
+        top: 20;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--background-light);
+        box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+        z-index: 1000;
+        transition: left 0.3s ease;
+    }
+
+    /* slide anime for sidebar */
+    .sidebar.sm-none {
+        left: -200px;
+    }
+
+    aside.main-content{
+        width: 100%;
+        padding: 1em;
+        margin: .5em;
+        height: auto;
+    }
+    .search-input{
+        width: 100%;
+        flex-direction: column;
+    }
+    .search-input button{
+        width: 100%;
+        margin-top: 1em;
+    }
+
+    .tog{
+        cursor: pointer;
+        font-size: 1.25rem;
+        font-weight: 600;
+        margin-left: 1em;
+        height: 1.5em;
+        width: 1.5em;
+        background: var(--background-light);
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    div.all-filters{
+        margin-top: 2em;
+    }
+
+    div.property-cards{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 1em;
+
+        height: 60%;
+        overflow: auto;
+    }
+    div.property-cards .card{
+        width: 350px;
+        border: 1px solid var(--border-color);
+        padding: 1em;
+        border-radius: .25em;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+    div.property-cards .card img{
+        height: 180px;
+    }
+
+
+ 
 
 }
 
