--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ table th, table td {
     padding: 12px;
     border: 1px solid var(--border-color);
     text-align: left;
+
 }
 table th {
     background: #f0f0f0;
@@ -166,6 +167,11 @@ label{
 .caption{
     font-size: .75rem !important;
     color: var(--text-muted);
+    margin: 1em 0;
+}
+.caption-warning{
+    font-size: .75rem !important;
+    color: rgb(255, 170, 0);
     margin: 1em 0;
 }
 
@@ -732,8 +738,28 @@ section.bids .bid-record p{
         height: 180px;
     }
 
+    /* Manage users */
 
- 
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+    }
+    table th, table td {
+        padding: 12px;
+        border: 1px solid var(--border-color);
+        text-align: left;
+        font-size: .85rem;
+        width: 120px;
+        max-width: 120px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-wrap: nowrap;
+
+    }
+    table th {
+        background: #f0f0f0;
+    }
 
 }
 
