--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,20 @@ label{
     cursor: pointer;
     transition: background 0.3s ease-in-out;
 }
+.primary-btn-outlined{
+    background: var(--background-light);
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+
+    font-size: 1rem;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+
+    padding: .75em 3em;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+}
 .danger-btn{
     background: var(--secondary-color);
     color: #fff;
@@ -839,3 +853,227 @@ section.bids .bid-record p{
 /* ****************************************************** */
 /* ****************************************************** */
 /* ****************************************************** */
+
+
+/* User related CSS */
+
+/* dashboard */
+.top-bar-user{
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    padding: .5em 1.5em;
+
+    background: var(--primary-color);
+}
+.top-bar-user .logo{
+    color: var(--background-light);
+    display: flex;
+    align-items: center;
+    font-size: .75rem;
+    font-weight: 600;
+    text-decoration: none;
+    column-gap: 1em;
+}
+
+.top-bar-user .logout{
+    border-color: var(--background-light);
+    background-color: var(--primary-color);
+    color: var(--background-light);
+}
+.top-bar-user .logout:hover{
+    background-color: var(--primary-color-h);
+}
+.top-bar-user .primary-btn-sm{
+    border: 2px solid var(--background-light);
+    background-color: var(--background-light);
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+.user-actions{
+    display: flex;
+    align-items: center;
+    column-gap: 1em;
+    color: var(--background-light);
+}
+
+
+.dashboard-user{
+    display: flex;
+    min-height: 94vh;
+    height: 94vh;
+    justify-content: center;
+    align-items: center;
+}
+.dashboard-user .main-content{
+     margin: 2em auto;
+}
+.dashboard-user .search-input{
+    background-color: var(--background-light);
+    padding: .75em .5em;
+}
+
+
+
+
+/* Responsiveness for small screens */
+@media screen and (max-width: 768px) {
+
+   
+   header .top-bar-user {
+        display: block;
+        z-index: 999999 !important;
+    }
+    .top-bar-user h2 {
+        text-align: center;
+    }
+    .top-bar-user .user-actions{
+        margin-top: 1em;
+        margin-bottom: 6em;
+
+        justify-content: center;
+    }
+
+    .dashboard-user{
+        margin-top: 24em;
+        border-radius: .25em;
+    }
+
+    .dashboard-user .search-input{
+        border-radius: .25em;
+    }
+
+    
+
+    .user-login {
+        width: 100%;
+        max-width: 400px;
+        margin: 1em auto;
+        border: red 1px solid;
+    }
+
+    /* view property */
+    .property-view {
+        margin: 1em auto;
+        width: 100%;
+        max-width: 100%;
+    }
+    .property-view .property-card aside.property-image, .property-view .property-card aside.property-details {
+        width: 100%;
+    }
+    section.bids{
+        overflow-x: auto;
+        width: 100%;
+        max-width: 100%;
+    }
+    section.bids ul{
+        overflow: scroll;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    section.bids .bid-record{
+        width: fit-content;
+        max-width: fit-content;
+
+    }
+    section.bids .bid-record p{
+       width: 50%;
+        max-width: 50%;
+        text-wrap: nowrap;
+    }
+    .sm-none{
+    display: none !important;
+    }
+    .sm-only{
+        display: block !important;
+    }
+
+    /* edit property */
+    .edit-property, .add-property{
+        margin: 1em auto;
+        width: 100dvw;
+        max-width: 100dvw;
+    }
+
+
+
+
+    .dashboard-user aside.main-content{
+        width: 100%;
+        padding: 1em;
+        margin: .5em;
+    }
+    .search-input{
+        width: 100%;
+        flex-direction: column;
+    }
+    .search-input button{
+        width: 100%;
+        margin-top: 1em;
+    }
+
+    .tog{
+        cursor: pointer;
+        font-size: 1.25rem;
+        font-weight: 600;
+        margin-left: 1em;
+        height: 1.5em;
+        width: 1.5em;
+        background: var(--background-light);
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    div.all-filters{
+        margin-top: 2em;
+    }
+
+    div.property-cards{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 1em;
+
+        height: 60%;
+        overflow: auto;
+    }
+    div.property-cards .card{
+        width: 350px;
+        border: 1px solid var(--border-color);
+        padding: 1em;
+        border-radius: .25em;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+    div.property-cards .card img{
+        height: 180px;
+    }
+
+    /* Manage users */
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+    }
+    table th, table td {
+        padding: 12px;
+        border: 1px solid var(--border-color);
+        text-align: left;
+        font-size: .85rem;
+        width: 120px;
+        max-width: 120px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-wrap: nowrap;
+
+    }
+    table th {
+        background: #f0f0f0;
+    }
+
+}
