--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -865,6 +865,7 @@ section.bids .bid-record p{
     padding: .5em 1.5em;
 
     background: var(--primary-color);
+    color: var(--background-light);
 }
 .top-bar-user .logo{
     color: var(--background-light);
@@ -937,6 +938,30 @@ section.bids .bid-record p{
     margin-top: 1em;
 }
 
+.profile-card{
+    width: 50dvw;
+    max-width: 650px;
+    background: var(--background-light);
+    border-radius: .25rem;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+
+    padding: 4em 2em;
+
+    margin: 2em auto;
+}
+.bids-card{
+    width: 50dvw;
+    max-width: 650px;
+    background: var(--background-light);
+    border-radius: .25rem;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+
+    padding:2em;
+
+    margin: 2em auto;
+
+    font-size: .75rem !important;
+}
 
 
 
@@ -1088,27 +1113,19 @@ section.bids .bid-record p{
         height: 180px;
     }
 
-    /* Manage users */
 
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-bottom: 20px;
-    }
-    table th, table td {
-        padding: 12px;
-        border: 1px solid var(--border-color);
-        text-align: left;
-        font-size: .85rem;
-        width: 120px;
-        max-width: 120px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        text-wrap: nowrap;
+.bids-card, .profile-card{
+    width: 100%;
+    max-width: 380px;
+    background: var(--background-light);
+    border-radius: .25rem;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-    }
-    table th {
-        background: #f0f0f0;
-    }
+    padding:1em;
+
+    margin: 1em;
+
+    font-size: .75rem !important;
+}
 
 }
