--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1129,3 +1129,34 @@ section.bids .bid-record p{
 }
 
 }
+.hide{
+    display: none;
+}
+.show{
+    display: flex;
+}
+
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  align-items: center;
+  justify-content: center;
+  display: none;
+  z-index: 10000;
+  padding: 20px;
+}
+
+div.message {
+   background: #fff;
+  padding: 24px;
+  border-radius: .25rem;
+  width: 350px;
+  max-width: 90%;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
+  position: relative;
+  animation: fadeIn 0.25s ease-in-out;
+}
